Give color to text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="assets/input.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="header">
+  <h1 class="header text">
     Hello world!
   </h1>
 </body>
